--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.10.3",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fontsource/outfit": "^5.1.0",
     "@fontsource/roboto": "^5.1.0",
+    "framer-motion": "^12.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
